Restore CDM context on Resume().

Also converts all uses of |weak_factory_| to use a |weak_this_|, as GetWeakPtr() is not threadsafe.

BUG=595898

Review URL: https://codereview.chromium.org/1815013002

Cr-Commit-Position: refs/heads/master@{#382109}

Former-commit-id: 7655364f9ae672fdbd05e5751006387207b0bf51